syntax = "proto3";

package auth;
option go_package = "github.com/jekiti/citydrive/gen/proto/auth; authpb";

service AuthService {
  rpc Register(RegisterRequest) returns (RegisterResponse);
  rpc Login(LoginRequest) returns (LoginResponse);
}

message RegisterRequest {
  string email = 1;
  string name = 2;
  string surname = 3;
  string department = 4;
}

message RegisterResponse {
  string password = 1;
  int64 id = 2;
}

message LoginRequest {
  string email = 1;
  string password = 2;
}

message LoginResponse {
  string access_token = 1;
}
// 